ctype_innodb_like.inc:   New BitKeeper file ``mysql-test/include/ctype_innodb_like.inc'' Many files:   bug#11650: LIKE pattern matching using prefix index doesn't return correct result   min and max values were too long in the case of prefix key.   Fix my_like_range functions not to exceed prefix length. ctype_innodb_like.inc:   new file