strings/ctype-cp932.c
@@ -324,9 +324,14 @@ static my_bool my_like_range_cp932(CHARSET_INFO *cs __attribute__((unused)),
 				  uint res_length, char *min_str,char *max_str,
 				  uint *min_length,uint *max_length)
 {
-  const char *end=ptr+ptr_length;
+  const char *end;
   char *min_org=min_str;
   char *min_end=min_str+res_length;
+  uint charlen= my_charpos(cs, ptr, ptr+ptr_length, res_length/cs->mbmaxlen);
+
+  if (charlen < ptr_length)
+    ptr_length= charlen;
+  end= ptr + ptr_length;
 
   while (ptr < end && min_str < min_end) {
     if (ismbchar_cp932(cs, ptr, end)) {
